--- a/BattleTank/Config/DefaultInput.ini
+++ b/BattleTank/Config/DefaultInput.ini
@@ -41,6 +41,7 @@ DefaultViewportMouseLockMode=LockOnCapture
 +ActionMappings=(ActionName="Quit",Key=Escape,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Quit",Key=Gamepad_Special_Left,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +ActionMappings=(ActionName="Fire",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="Fire",Key=Gamepad_FaceButton_Bottom,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
 +AxisMappings=(AxisName="AimAzimuth",Key=MouseX,Scale=1.000000)
 +AxisMappings=(AxisName="AimElevation",Key=MouseY,Scale=1.000000)
 +AxisMappings=(AxisName="AimAzimuth",Key=Gamepad_RightX,Scale=1.000000)
@@ -56,6 +57,9 @@ DefaultViewportMouseLockMode=LockOnCapture
 +AxisMappings=(AxisName="Move Forward",Key=Gamepad_LeftY,Scale=1.000000)
 +AxisMappings=(AxisName="Move Forward",Key=Up,Scale=1.000000)
 +AxisMappings=(AxisName="Move Forward",Key=Down,Scale=-0.500000)
++AxisMappings=(AxisName="Turn Right",Key=Gamepad_LeftX,Scale=1.000000)
++AxisMappings=(AxisName="Turn Right",Key=Right,Scale=1.000000)
++AxisMappings=(AxisName="Turn Right",Key=Left,Scale=-1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
